--- a/src/main/resources/static/web/profile.html
+++ b/src/main/resources/static/web/profile.html
@@ -67,7 +67,7 @@
             </div>
         </div>
     </div>
-    <div class="calendar-container">
+    <div class="event-container">
 
     </div>
 </div>
