add little modifications

--- a/src/main/resources/static/web/profile.html
+++ b/src/main/resources/static/web/profile.html
@@ -67,8 +67,12 @@
             </div>
         </div>
     </div>
-    <div class="event-container">
-
+    <div class="col">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-1">{{ profileInfo.firstName }} {{ profileInfo.lastName }}</h1>
+            </div>
+        </div>
     </div>
 </div>
 <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
